@@ -5,6 +5,8 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 05-02-2006 fixed: [ 1406355 ] Last.fm Crashing on Personal radio playback (no audio playable after pap filereader timed out)
+ - 05-02-2006 fixed: Last.fm - trackinfo for first track in stream was not always shown.
  - 05-02-2006 fixed: dvdplayer would have wrong sync of audio/video in thx test discs. (ripped vobs from those tests will still have wrong sync)
  - 05-02-2006 fixed: spincontrols didn't display any values.
  - 05-02-2006 added: <spinfont> tag to list, thumb and textboxes.
